<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cn.sparrowmini</groupId>
	<artifactId>sparrow-file-ext-txcos</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>
	<properties>
		<java.version>11</java.version>
		<hibernate.version>5.6.5.Final</hibernate.version>
		<aspectj.version>1.9.19</aspectj.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>cn.sparrowmini</groupId>
			<artifactId>sparrow-org</artifactId>
			<version>0.1.2</version>
		</dependency>
		
	


		<!-- 腾讯存储桶-->
		<dependency>
			<groupId>com.qcloud</groupId>
			<artifactId>cos-sts_api</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.qcloud</groupId>
			<artifactId>cos_api</artifactId>
			<version>5.6.100</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
				</configuration>
			</plugin>
			<!-- add this plugin to run test cass in maven auto-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>